<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.altice.manuel.tupesoideal.MainActivity"
    android:orientation="vertical">

    <TextView
        style="@style/titulos"
        android:text="@string/titulo_peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            style="@style/estilo_de_EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_peso"
            android:layout_weight="4"
            android:inputType="numberDecimal"
            android:id="@+id/masa_entry"/>
        <Spinner
            android:id="@+id/spinner_masa"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:entries="@array/unidad_de_medida_peso"/>
    </LinearLayout>
    <TextView
        style="@style/titulos"
        android:text="@string/titulo_altura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            style="@style/estilo_de_EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/hint_estatura_mts"
            android:inputType="numberDecimal"
            android:id="@+id/estatura_mts_entry"/>
        <EditText
            style="@style/estilo_de_EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/hint_estatura_pies"
            android:inputType="numberDecimal"
            android:id="@+id/estatura_pies_entry"
            android:visibility="gone"/>
        <EditText
            style="@style/estilo_de_EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/hint_estatura_pulgs"
            android:inputType="numberDecimal"
            android:id="@+id/estatura_pulgs_entry"
            android:visibility="gone"/>
        <Spinner
            android:id="@+id/spinner_estatura"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:entries="@array/unidad_de_medida_altura"
            android:prompt="@string/entrada"/>
    </LinearLayout>
    <TextView
        style="@style/titulos"
        android:text="@string/complexion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textStyle="bold"/>
    <Spinner
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:entries="@array/complexion"
        android:prompt="@string/entrada"/>
    <Button
        style="@style/boton_resultados"
        android:id="@+id/boton_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_boton_calcular"
        android:layout_margin="@dimen/espacio_entre_vistas"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resultados"
        android:orientation="vertical"
        style="@style/layout_resultados">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/layout_resultados"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/titulo_imc"/>
            <TextView
                style="@style/titulo_resultados"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/resultado_imc"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/layout_resultados"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/titulo_condicion"/>
            <TextView
                style="@style/titulo_resultados"
                android:text=""
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/resultado_condicion"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/layout_resultados"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/titulo_masa_recomendada"/>
            <TextView
                style="@style/titulo_resultados"
                android:text=""
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/resultado_peso_recomendado"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
